Revise introduction and thesis statement in finalProject.Rmd

--- a/finalProject.Rmd
+++ b/finalProject.Rmd
@@ -12,7 +12,9 @@ library(tidyverse)
 
 Introduction:
 
-A student's GPA is one of the most common forms of academic measurement that many people, such as Companies, Professors, and even student themselves, use to get an idea of one's academic level. GPA is measured by giving each letter grade a number of points, and then averaging them out to calculate your GPA. There are many uses of this, such as students using this to get a gauge on how well they're doing, companies selecting who they want to hire, and admission officers at Universities deciding who gets in. It's important to maintain a high GPA, since there are many benefits to having one. Everyone in our group was wondering how students at UW-Madison have kept up with this standard, which in turn caused us to find a data set of all the grades at UW-Madison from the years 2006 to 2017. Something that isn't clearly stated anywhere but is very interesting to know about is how different our GPA is today compared to the past. Since we had a data set on the grades from the past, we decided to find out the last semester average GPA of UW-Madison and compare it to the average from our data set. Thus, our question then became: is th eaverage gpa at Uw-Madison a 3.492? 3.492 is the last semester average GPA we got online, ... (thesis statement)
+  A student's GPA is one of the most common forms of academic measurement that many people, such as Companies, Professors, and even student themselves, use to get an idea of one's academic level. GPA is calculated by assigning each letter grade a number of points and then averaging them. There are many uses for this metric, such as helping students assess how well they’re doing, helping companies decide who to hire, and helping university admission officers evaluate applicants. Because of these uses, it’s important to maintain a high GPA.
+
+  Everyone in our group was curious about how students at UW–Madison have kept up with this standard, which led us to a data set containing all course grades at UW–Madison from 2006 to 2017. Something that isn't clearly stated anywhere but is very interesting to know about is how different our GPA is today compared to the past. Since we had access to historical grades, we decided to compare the last semester’s average GPA to the average in our data set. We found the last semester’s average GPA to be 3.492, which gave us a benchmark for comparison. After calculating the overall average GPA from the 2006–2017 data, we discovered that the data set’s average GPA was actually higher than last semester’s reported value. Therefore, our thesis is that the average GPA at UW–Madison has decreased compared to the historical average, indicating a meaningful shift in academic performance over time.
 
 
 Background:
